# verilator_example

./: CMakeLists.txt  README.md
cmake/: verilator.cmake
include/: testbench.h
infra/: readme.md
infra/ld.scripts/: simple_asm.ld
src/rtl/: counter.v  picorv32_cut.v  top.v  wb_ram.v
src/tb/: main.cpp
src/tb/common/: module_wrapper.h  types.h
src/tb/py/: TODO
src/tb/router/: tb_router.cpp  tb_router.h
src/tb/tests/: basic.cpp  py_exec.cpp
src/tests/asm/: mem_img.asm.s  mem_img.s  test_prog.txt
